# sp-course-project

./: CMakeLists.txt  README.md
assembler/: CMakeLists.txt
assembler/include/: assembler.h
assembler/source/: assembler.c
assemblerlib/: CMakeLists.txt
assemblerlib/include/: assemblerlib.h
assemblerlib/source/: assemblerlib-private.h  assemblerlib.c  constants.c  directives.c  number_systems_conversions.c  parser.c  target-addr-calculations.c
commonlib/: CMakeLists.txt
commonlib/include/: commonlib.h
commonlib/source/: array.c  commonlib.c  map.c
documentation/: SIC.md  SICXE.md
interpreter/: CMakeLists.txt
samples/programs/: basic.txt  macros.txt  prog_blocks.txt
samples/solutions/: basic_obj.txt  basic_sol.txt  control_section_obj.txt  control_section_sol.txt  functions_sol.txt  literals_sol.txt  macros_obj.txt  macros_sol.txt  prog_blocks_obj.txt  prog_blocks_sol.txt
samples/test/: basic.txt  basic_sol.txt  control_section.txt  control_section_sol.txt  functions.txt  functions_sol.txt  literals.txt  literals_sol.txt  macros.txt  macros_sol.txt  prog_blocks.txt  prog_blocks_sol.txt
sic/: CMakeLists.txt
sic-lib/: CMakeLists.txt
sic-xe/: CMakeLists.txt
sic-xe/source/: main.c
sic/source/: main.c
